# ProjectHelperFastapi

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/alembic/: env.py
app/alembic/versions/: 2024_07_31_1729-d7ce9b540046_initial.py  2024_07_31_1729-e6d43e2e103a_add_users.py  2024_07_31_1731-d3c4ad28275c_add_tasks.py  2024_07_31_1733-6dca30b36ea2_add_shoppings.py  2024_08_05_1443-f7b40d6f3829_add_many_to_many_users_tasks.py  2025_04_06_1835-0016d7216e5a_change_association_table_name.py  2025_04_06_1854-e4dc1b076a76_add_users_shoppings_many_to_many.py  2025_04_21_1424-0623a4c85f70_add_friends_association_table.py  2025_04_21_2140-aca0cb033738_change_passwords_storage.py  2025_05_21_2325-f1b1ffe1fac3_add_groups_association_table.py
app/dao/: base.py
app/groups/: dao.py  models.py  router.py  schemas.py
app/scripts/: start.sh
app/shopping/: models.py  router.py
app/tasks/: dao.py  models.py  router.py  schemas.py
app/users/: dao.py  models.py  router.py  schemas.py
