[tool.poetry]
name = "fastapi-project-helper"
version = "0.1.0"
description = ""
authors = ["monkrobot <programmingboy2000@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
gunicorn = "^22.0.0"
uvicorn = "^0.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
